se estan checando distintas fuentes de letra

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <h1>Hola Mundo</h1>
+    <h2>Esto es una prueba de bedu APP</h2>
+    <h3>probando distintas fuentes</h3>
 </body>
 </html>
